# btonic

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: python-package.yml
btonic/: __init__.py  __main__.py  btonic.py  btonic_file.py
tests/: conftest.py  test_btonic.py  test_btonic_file.py
